Completed landing page. Tomorrow starting on avatar one.

--- a/index.html
+++ b/index.html
@@ -9,37 +9,57 @@
 </head>
 
 <body>
-  <header id="container">
+  <header class="container">
     <h2 id="chin-title">降卋神通</h2>
     <h1 id="title">
       <span id="title-main">Avatar</span>
       <span id="title-sub">The Last Airbender</span>
     </h1>
   </header>
-  <main>
-    <h2 class="sub-title">Choose your avatar</h2>
+  <main class="container">
     <section id="content-img">
       <div class="img-item">
-        <a href="" class="img-link">
+        <a href="/pages/toph.html" class="img-link">
           <img class="imgs" id="toph" src="/img/headShotOfToph.png" alt="Toph">
+          <div class="show-lay"></div>
+          <div class="text show">
+            Toph<br>
+            <img src="" alt="">
+          </div>
         </a>
       </div>
       <div class="img-item">
-        <a href="" class="img-link">
-          <img class="imgs" id="katara" src="/img/HeadShotOfKatara2.jpg" alt="Katara">
+        <a href="/pages/katara.html" class="img-link">
+          <img class="imgs" id="katara" src="/img/headShotOfKatara2.jpg" alt="Katara">
+          <div class="show-lay show"></div>
+          <div class="text">
+            Katara<br>
+            <img src="" alt="">
+          </div>
         </a>
       </div>
       <div class="img-item">
-        <a href="" class="img-link">
+        <a href="/pages/zuko.html" class="img-link">
           <img class="imgs" id="zuko" src="/img/headShotOfzuko.jpg" alt="Zuko">
+          <div class="show-lay show"></div>
+          <div class="text">
+            Zuko<br>
+            <img src="" alt="">
+          </div>
         </a>
       </div>
       <div class="img-item">
-        <a href="" class="img-link">
+        <a href="/pages/aang.html" class="img-link">
           <img class="imgs" id="aang" src="/img/headShotAang.jpeg" alt="Aang">
+          <div class="show-lay show"></div>
+          <div class="text">
+            Aang<br>
+            <img src="" alt="">
+          </div> 
         </a>
       </div>
     </section>
+    <h2 class="sub-title">Choose your avatar</h2>
   </main>
   <script src="main.js"></script>
 </body>
