Added the audio for my landing page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" href="main.css">
   <title>Avatar The Last Airbender</title>
 </head>
@@ -15,6 +16,16 @@
       <span id="title-main">Avatar</span>
       <span id="title-sub">The Last Airbender</span>
     </h1>
+    <figure>
+      <!-- <figcaption>Listen to Brave Little Soldier Boy:</figcaption> -->
+      <audio
+          id="player"
+          controls
+          src="/audio/31YuYen.mp3">
+              Your browser does not support the
+              <code>audio</code> element.
+      </audio>
+  </figure>
   </header>
   <main class="container">
     <section id="content-img">
@@ -22,40 +33,40 @@
         <a href="/pages/toph.html" class="img-link">
           <img class="imgs" id="toph" src="/img/headShotOfToph.png" alt="Toph">
           <div class="show-lay"></div>
-          <div class="text show">
+          <!-- <div class="toph-text">
             Toph<br>
             <img src="" alt="">
-          </div>
+          </div> -->
         </a>
       </div>
       <div class="img-item">
         <a href="/pages/katara.html" class="img-link">
           <img class="imgs" id="katara" src="/img/headShotOfKatara2.jpg" alt="Katara">
           <div class="show-lay show"></div>
-          <div class="text">
+          <!-- <div class="text">
             Katara<br>
             <img src="" alt="">
-          </div>
+          </div> -->
         </a>
       </div>
       <div class="img-item">
         <a href="/pages/zuko.html" class="img-link">
           <img class="imgs" id="zuko" src="/img/headShotOfzuko.jpg" alt="Zuko">
           <div class="show-lay show"></div>
-          <div class="text">
+          <!-- <div class="text">
             Zuko<br>
             <img src="" alt="">
-          </div>
+          </div> -->
         </a>
       </div>
       <div class="img-item">
         <a href="/pages/aang.html" class="img-link">
           <img class="imgs" id="aang" src="/img/headShotAang.jpeg" alt="Aang">
           <div class="show-lay show"></div>
-          <div class="text">
+          <!-- <div class="text">
             Aang<br>
             <img src="" alt="">
-          </div> 
+          </div>  -->
         </a>
       </div>
     </section>
