--- a/index.html
+++ b/index.html
@@ -2,35 +2,21 @@
 <html lang="en">
 
 <head>
-  <!-- Basic Meta -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- The Creater -->
   <meta name="author" content="Nairobi Sheikh" />
   <meta name="description"
     content="Avatar the last airbender, the game. A basic game where you get to paly the role of whatever avatar you choose. You go through their life experience, fight their enemies and bring peace to the villages." />
 
-  <!-- Favicon -->
-  <link rel="icon" href="/assets/img/red.png" type="image/png" sizes="16x16" />
+  <link rel="icon" href="/img/theFace.jpg" type="image/png" sizes="16x16" />
 
-  <!-- CSS Link -->
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="/css/main.css">
 
-  <title>Avatar The Last Airbender</title>
+  <title>AvatarTheLastAirbenderTheGame</title>
 </head>
 
 <body>
   <header class="container">
-    <!-- <figure>
-      <figcaption>Listen to Brave Little Soldier Boy:</figcaption>
-      <audio
-          id="my_audio" loop="loop" autoplay="autoplay"
-          controls
-          src="/audio/31YuYen.mp3">
-              Your browser does not support the
-              <code>audio</code> element.
-      </audio>
-    </figure> -->
     <dive id="playerContent"></dive>
     <h2 id="chin-title">降卋神通</h2>
     <h1 id="title">
@@ -40,50 +26,54 @@
   </header>
   <main class="container">
     <section id="content-img">
-      <div class="img-item">
+      <div class="img-cotainer">
         <a href="/pages/toph.html" class="img-link">
           <img class="imgs" id="toph" src="/img/headShotOfToph.png" alt="Toph">
-          <div class="show-lay"></div>
-          <!-- <div class="toph-text">
-            Toph<br>
-            <img src="" alt="">
-          </div> -->
+          <div class="show-lay show-cross">
+            <div class="text">
+              Toph<br>
+              <img src="" alt="">
+            </div>
+          </div>
         </a>
       </div>
-      <div class="img-item">
+      <div class="img-cotainer">
         <a href="/pages/katara.html" class="img-link">
           <img class="imgs" id="katara" src="/img/headShotOfKatara2.jpg" alt="Katara">
-          <div class="show-lay show"></div>
-          <!-- <div class="text">
-            Katara<br>
-            <img src="" alt="">
-          </div> -->
+          <div class="show-lay show-cross">
+            <div class="text">
+              Katara<br>
+              <img src="" alt="">
+            </div>
+          </div>
         </a>
       </div>
-      <div class="img-item">
+      <div class="img-cotainer">
         <a href="/pages/zuko.html" class="img-link">
           <img class="imgs" id="zuko" src="/img/headShotOfzuko.jpg" alt="Zuko">
-          <div class="show-lay show"></div>
-          <!-- <div class="text">
-            Zuko<br>
-            <img src="" alt="">
-          </div> -->
+          <div class="show-lay show-cross">
+            <div class="text">
+              Zuko<br>
+              <img src="" alt="">
+            </div>
+          </div>
         </a>
       </div>
-      <div class="img-item">
+      <div class="img-cotainer">
         <a href="/pages/aang.html" class="img-link">
           <img class="imgs" id="aang" src="/img/headShotAang.jpeg" alt="Aang">
-          <div class="show-lay show"></div>
-          <!-- <div class="text">
-            Aang<br>
-            <img src="" alt="">
-          </div>  -->
+          <div class="show-lay show-cross">
+            <div class="text">
+              Aang<br>
+              <img src="" alt="">
+            </div>
+          </div>
         </a>
       </div>
     </section>
     <h2 id="yourAvatar">Choose your avatar</h2>
   </main>
-  <script src="main.js"></script>
+  <script src="/script/main.js"></script>
 </body>
 
 </html>
