--- a/pages/toph.html
+++ b/pages/toph.html
@@ -1,11 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcom to Toph's page</title>
+  <!-- Basic Meta -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- The Creater -->
+  <meta name="author" content="Nairobi Sheikh" />
+  <meta name="description"
+    content="Avatar the last airbender, the game. A basic game where you get to paly the role of whatever avatar you choose. You go through their life experience, fight their enemies and bring peace to the villages." />
+
+  <!-- Favicon -->
+  <link rel="icon" href="/img/theFace.jpg" type="image/png" sizes="16x16" />
+
+  <!-- CSS Link -->
+  <link rel="stylesheet" href="/css/toph.css">
+
+  <title>AvatarTheLastAirbenderTheGame</title>
 </head>
 <body>
-  This is tophs pages!!!!
+  <header class="container">
+    <div class="wrapper">
+      <div class="sides">
+        <div class="side toph">
+          <h1 class="name">Toph</h1>
+        </div>
+        <div class="versus">
+          <span><a href="#undergroundGame">VS.<br>play</a></span>
+        </div>
+        <div class="side theBoulder">
+          <h1 class="name">The Boulder</h1>
+        </div>
+      </div>
+    </div>
+  </header>
+  <main id="content">
+    <section id="undergroundGame">
+      <h2 class="title-main">Whack-The-Boulder!</h2>
+      <div class="msg1"></div>
+      <div class="msg2"></div>
+      <div class="score">0</div>
+      <div class="game">
+        <div class="hole hole1">
+          <div class="the-boulder"></div>
+        </div>
+        <div class="hole hole2">
+          <div class="the-boulder"></div>
+        </div>
+        <div class="hole hole3">
+          <div class="the-boulder"></div>
+        </div>
+        <div class="hole hole4">
+          <div class="the-boulder"></div>
+        </div>
+        <div class="hole hole5">
+          <div class="the-boulder"></div>
+        </div>
+        <div class="hole hole6">
+          <div class="the-boulder"></div>
+        </div>
+      </div>
+      <button class="btn">Start!</button>
+    </section>
+  </main>
+  <script src="/script/toph.js"></script>
 </body>
 </html>
