fixed css, both of the html files

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name="description"
     content="Avatar the last airbender, the game. A basic game where you get to paly the role of whatever avatar you choose. You go through their life experience, fight their enemies and bring peace to the villages." />
 
-  <link rel="icon" href="/img/theFace.jpg" type="image/png" sizes="16x16" />
+  <link rel="icon" href="img/theFace.jpg" type="image/png" sizes="16x16" />
 
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <title>AvatarTheLastAirbenderTheGame</title>
 </head>
@@ -27,8 +27,8 @@
   <main class="container">
     <section id="content-img">
       <div class="img-cotainer">
-        <a href="/pages/toph.html" class="img-link">
-          <img class="imgs" id="toph" src="/img/headShotOfToph.png" alt="Toph">
+        <a href="pages/toph.html" class="img-link">
+          <img class="imgs" id="toph" src="img/headShotOfToph.png" alt="Toph">
           <div class="show-lay show-cross">
             <div class="text">
               Toph<br>
@@ -38,8 +38,8 @@
         </a>
       </div>
       <div class="img-cotainer">
-        <a href="/pages/katara.html" class="img-link">
-          <img class="imgs" id="katara" src="/img/headShotOfKatara2.jpg" alt="Katara">
+        <a href="pages/katara.html" class="img-link">
+          <img class="imgs" id="katara" src="img/headShotOfKatara2.jpg" alt="Katara">
           <div class="show-lay show-cross">
             <div class="text">
               Katara<br>
@@ -49,8 +49,8 @@
         </a>
       </div>
       <div class="img-cotainer">
-        <a href="/pages/zuko.html" class="img-link">
-          <img class="imgs" id="zuko" src="/img/headShotOfzuko.jpg" alt="Zuko">
+        <a href="pages/zuko.html" class="img-link">
+          <img class="imgs" id="zuko" src="img/headShotOfzuko.jpg" alt="Zuko">
           <div class="show-lay show-cross">
             <div class="text">
               Zuko<br>
@@ -60,8 +60,8 @@
         </a>
       </div>
       <div class="img-cotainer">
-        <a href="/pages/aang.html" class="img-link">
-          <img class="imgs" id="aang" src="/img/headShotAang.jpeg" alt="Aang">
+        <a href="pages/aang.html" class="img-link">
+          <img class="imgs" id="aang" src="img/headShotAang.jpeg" alt="Aang">
           <div class="show-lay show-cross">
             <div class="text">
               Aang<br>
@@ -73,7 +73,7 @@
     </section>
     <h2 id="yourAvatar">Choose your avatar</h2>
   </main>
-  <script src="/script/main.js"></script>
+  <script src="script/main.js"></script>
 </body>
 
 </html>
