--- a/pages/toph.html
+++ b/pages/toph.html
@@ -10,10 +10,10 @@
     content="Avatar the last airbender, the game. A basic game where you get to paly the role of whatever avatar you choose. You go through their life experience, fight their enemies and bring peace to the villages." />
 
   <!-- Favicon -->
-  <link rel="icon" href="/img/theFace.jpg" type="image/png" sizes="16x16" />
+  <link rel="icon" href="img/theFace.jpg" type="image/png" sizes="16x16" />
 
   <!-- CSS Link -->
-  <link rel="stylesheet" href="/css/toph.css">
+  <link rel="stylesheet" href="css/toph.css">
 
   <title>AvatarTheLastAirbenderTheGame</title>
 </head>
@@ -62,6 +62,6 @@
       <button class="btn">Start!</button>
     </section>
   </main>
-  <script src="/script/toph.js"></script>
+  <script src="script/toph.js"></script>
 </body>
 </html>
