fixe css htm js of toph

--- a/pages/toph.html
+++ b/pages/toph.html
@@ -59,6 +59,7 @@
           <div class="the-boulder"></div>
         </div>
       </div>
+      <div class="countdown">countdown</div>
       <button class="btn">Start!</button>
     </section>
   </main>
