fixed toph's HTML and CSS

--- a/pages/toph.html
+++ b/pages/toph.html
@@ -25,7 +25,7 @@
           <h1 class="name">Toph</h1>
         </div>
         <div class="versus">
-          <span><a href="#undergroundGame">VS.<br>play</a></span>
+          <span><a href="#undergroundFight">VS.<br>play</a></span>
         </div>
         <div class="side theBoulder">
           <h1 class="name">The Boulder</h1>
@@ -34,7 +34,7 @@
     </div>
   </header>
   <main id="content">
-    <section id="undergroundGame">
+    <section id="undergroundFight">
       <h2 class="title-main">Whack-The-Boulder!</h2>
       <div class="msg1"></div>
       <div class="msg2"></div>
